src/components/EpisodeSelector/slide.module.css
.card {
  position: relative;
  height: 500px;
  width: 260px;
  background-color: black;
  border: 5px solid var(--yellow);
  box-sizing: border-box;
  /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15); */
}

.imageContainer {
  position: relative;
  width: 100%;
  border-bottom: 5px solid var(--yellow);
  height: 50%;
  background-color: var(--yellow);
}

.image {
  width: 250px;
  height: 250px;
  position: absolute;
  left: 0;
  border-bottom: 5px solid var(--yellow);
}

.play {
  opacity: 0;
  border: none;
  background: none;
  appearance: none;
  -webkit-transition: all 0.5s ease;
  transition: opacity 0.5s ease; /* Transition for fading in/out */
  position: absolute;
  top: 15px;
  left: 15px;
  cursor: pointer;
  filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.8));
  scale: 0.7;
}

.play .triangle {
  -webkit-transition: all 0.7s ease-in-out;
  stroke-dasharray: 240;
  stroke-dashoffset: 480;
  stroke: var(--yellow);
  transform: translateY(0);
  fill: rgba(0, 0, 0, 0.8);
}

.play .circle {
  stroke: var(--yellow);
  stroke-dasharray: 650;
  stroke-dashoffset: 650;
  -webkit-transition: all 0.5s ease-in-out;
  opacity: 0.3;
}

.play:hover .triangle {
  stroke-dashoffset: 0;
  opacity: 1;
  stroke: var(--yellow);
  animation: nudge 0.7s ease-in-out;

  @keyframes nudge {
    0% {
      transform: translateX(0);
    }
    30% {
      transform: translateX(-5px);
    }
    50% {
      transform: translateX(5px);
    }
    70% {
      transform: translateX(-2px);
    }
    100% {
      transform: translateX(0);
    }
  }
}

.play:hover .circle {
  stroke-dashoffset: 0;
  opacity: 1;
}

:global(.swiper-slide) {
  filter: blur(1px);
}
:global(.swiper-slide-active) {
  filter: blur(0px);
}
:global(.swiper-slide-active) .play {
  opacity: 1;
}

:global(.swiper-button-next) {
  color: var(--yellow) !important;
}
:global(.swiper-button-prev) {
  color: var(--yellow) !important;
}

.cardText {
  height: calc(50% - 5px);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-align: center;
}

.cardText h2 {
  margin-bottom: 0px;
}

.cardText p {
  margin: 0 auto 0 auto;
  max-width: 80%;
}

.cardText > div {
  display: flex;
  justify-content: space-between;
}
.cardText > div > div:first-child {
  display: flex;
  align-items: center;
  padding: 0 20px;
}
.cardText > div > div:first-child > span:first-child {
  font-size: 4rem;
  font-weight: 800;
}
.cardText > div > div:first-child > span:last-child {
  font-size: 2rem;
  font-weight: 600;
}
.cardText > div > div:last-child {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 5px solid var(--yellow);
  border-right: none;
  border-bottom: none;
  padding: 10px 20px;
}
.cardText > div > div:last-child > span:first-child {
  font-size: 2rem;
  font-weight: bold;
}
.cardText > div > div:last-child > span:last-child {
  font-weight: 500;
}

